--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -57,7 +57,7 @@ Department of Econometrics and Business Statistics, Monash University\\
   \bigskip
   \bigskip
   \begin{center}
-    {\LARGE\bf Comparing the Power of Plot Designs to Reveal Correlation}
+    {\LARGE\bf What is the Best Way to Display Two Time Series to Read Association?}
 \end{center}
   \medskip
 } \fi
@@ -69,7 +69,7 @@ Visual inference in EDA is prone to type 1 errors from the over-interpretation o
 \end{abstract}
 
 \noindent
-{\it Keywords:}  Lineups, visual inference, power comparison, scatter plot, line graph, data visualisation, visual analytics, time series, temporal data
+{\it Keywords:}  data visualisation, statistical graphics, visual inference, power comparison, scatter plot, line graph, visual analytics, time series, temporal data, finance, econometrics
 \vfill
 
 \newpage
@@ -211,14 +211,7 @@ gen_null <- function(n, m=20, smoothed = FALSE){
 %For a scatter plot, this departure from the null, might be a single outlier, or few outliers, a non-linear pattern, or clusters, which the human eye detects as more different in this data plot than in any of the nulls. This is the reason why visualisation remains important today, human eyes can detect patterns which would not be detected mathematically.  But eyes need calibration, which the lineup protocol provides.
 %On its own, with a single plot, because of random sampling in collecting data, it is easy for the analyst to imagine a pattern when no real structure exists in the population. Visual skills of an observer in EDA is prone to Type I error, where the null hypothesis is rejected when it is actually true, caused by the inherently random formation of patterns when visualised which are attributed to structure rather than chance. \citet{Daniel} warns against this, by providing 40 pages of plots from the null distribution, he encourages data analysts to understand the patterns that can be created from data without inherent structure. (This is what \citet{Buja} call the Rorschach protocol.) By being aware of what can appear in this type of data, the analyst should be more wary of claiming any visual feature they find is a true relationship. But this is not enough, even seasoned data analysts can be misled.  \citet{Diaconis} introduced the notion of 'magical thinking' which argues that people commonly suffer from the over-interpretation of randomness, particularly if it matches a pre-conception. If it suits their particular bias, an analyst may make false discoveries of structure and false rejections of the null hypothesis. Whilst using both can complement each other, the treatment of Type I error has led EDA and inferential statistics to be considered as very disparate pursuits. The mathematical rigor that governs classical inference relies on a framework that acknowledges and controls for the rate of Type I error.  Section 2 describes the visual inference protocols which put EDA more firmly into the rigorous framework of statistical inference. 
 
-\begin{figure}[htbp]
-  \centering
-  \includegraphics[width=0.5\textwidth]{cnyline}
-  \caption{Cross-rates for Australian dollar and Chinese yuan against the United States dollar from Mar 30-May 2, 2015, shown as overlaid line graph. (Both sets of values were standardized to bring them to the same scale for plotting.) What would you report the correlation between the two series to be?}
-  \label{cny}
-\end{figure}
-
-In this paper we utilised the methods in visual inference to study plot design to investigate the relationship between two temporal variables. There is a substantial literature suggesting that scatter plots are the appropriate display to read association \citep{Cleveland, Harrison, Li}, however, when the two variables are temporal it is common to display them as time series, drawn on the same plot. Temporal dependence is present in many macroeconomic variables \citep{Nelson, Perron} and there is a strong argument for its presence in financial data \citep{Sher, Turtle}. It is a common, but untested, belief that the inclusion of time in the graphics will increase the detail of information displayed and allow relationships to be examined more comprehensively, so many analysts utilise the overlaid line graph to examine their data.
+Temporal dependence is present in many macroeconomic variables \citep{Nelson, Perron} and in financial data \citep{Sher, Turtle}. It is a common, but untested, belief that the inclusion of time in the graphics will increase the detail of information displayed and allow relationships to be examined more comprehensively, so many analysts utilise the overlaid line graph to examine their data (Figure \ref{nzd}). In the field of statistics, the recommendation for exploring association visually is to use a scatterplot. There is substantial literature supporting this \citep{Cleveland, Harrison, Li}.  However, it is still common that when the two variables are temporal they are displayed as overlaid time series (line graphs). In this paper we have utilized new methods for rigorously comparing plot design, using visual inference, to investigate which is the best display if reading association is important. 
 
 \begin{figure}[htbp]
   \centering
@@ -228,7 +221,16 @@ In this paper we utilised the methods in visual inference to study plot design t
   \label{nzd}
 \end{figure}
 
-To decide on an appropriate display requires awareness of cognitive principles in psychology such as the Gestalt law of common fate described by \citet{Wertheimer}. This law describes a tendency in human perception to 'see' a positive relationship between two objects that briefly move together over time, leading people to believe that they stay linked and share a 'common fate' (Figure~\ref{cny}), even if no relationship exists. \citet{Lee} work finds that humans are able to perceive a relationship between objects that move with temporal synchrony in accordance with the Gestalt Law, implying that a graphic than can utilise a dimension for time may be able to use the information provided by temporal dependence and potentially outperform the graph types that do not, such as the scatter plot. However, keep in mind magical thinking \citep{Diaconis},   the desire to find any pattern may lead to a false discovery of positive correlation. The law then has two effects, if positive correlation exists in temporal data, the observer may be drawn to it easier. If positive correlation does not exist, the observer may be fooled into thinking it does anyway. Either effect would lead to a more confident rejection of the null than if the same data was displayed as a scatter plot. Figure~\ref{cny} highlights the dangerous interaction between 'magical thinking' and the Gestalt Law, the observer is drawn to the period from April 8 to April 22, and may falsely believe that the two currencies may continue to move together. However, over the entire series the linear correlation between the two currencies is -0.12, indicating there is no actual relationship. Incorrectly relying on two currencies, or many other sets of economic variables, being dependent on each other can be extremely dangerous for a firm. \citet{Robbins} is similarly critical of the time-based line graph, where it is argued that information from overlaid line graphs can easily be misleading (Figure~\ref{murder}). When both lines dive after 1993, it is natural to compare the horizontal distance and say that the difference between the lines in 1994 is small. However, this is incorrect, as looking at the small horizontal distance is comparing the lines at different dates. It is not obvious that the difference in 1994 is the second greatest difference across the entire range, only slightly smaller than in 1993. \citet{Vanderplas} examines this effect in more detail. It is dubbed the 'Sine Illusion', where the human eye is poor at interpreting lines with such a sharp slope. As these problems are unique to the line graph, they argue that the scatter plot, which does not have any ability to display time, is the superior choice. However, in practice many data analysts are split between the two major alternatives for temporal data. The overlaid line graph is justified by its ability to present more information to the analyst; but many argue that it is this extra information that is misleading, and revert to the scatter plot for its strong non-temporal performance.
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=0.5\textwidth]{cnyline}
+  \caption{Cross-rates for Australian dollar and Chinese yuan against the United States dollar from Mar 30-May 2, 2015, shown as overlaid line graph. (Both sets of values were standardized to bring them to the same scale for plotting.) What would you report the correlation between the two series to be?}
+  \label{cny}
+\end{figure}
+
+To determine on an appropriate display requires awareness of cognitive principles such as the Gestalt law of common fate \citep{Wertheimer}. People have a tendency to `see' a positive association between two objects that only briefly move together over time, leading them to believe, perhaps erroneously, that they are linked and share a `common fate' (Figure~\ref{cny}). To the contrary, \citet{Lee} suggests that people may better perceive a relationship between objects that move with temporal synchrony in accordance with the Gestalt Law, implying that overlaid line graphs, that utilize a time axis, may outperform the graph types that do not, such as the scatter plot. The magical thinking ideas described in \citet{Diaconis} would counter \citet{Lee}'s findings. Magical thinking means that humans have a strong desire to find patterns, even imaginary, or mirages, which may lead to a false discovery of positive correlation from a small period of synchrony. 
+
+The law then has two effects, if positive correlation exists in temporal data, the observer may be drawn to it easier. If positive correlation does not exist, the observer may be fooled into thinking it does anyway. Either effect would lead to a more confident rejection of the null than if the same data was displayed as a scatter plot. Figure~\ref{cny} highlights the dangerous interaction between 'magical thinking' and the Gestalt Law, the observer is drawn to the period from April 8 to April 22, and may falsely believe that the two currencies may continue to move together. However, over the entire series the linear correlation between the two currencies is -0.12, indicating there is no actual relationship. Incorrectly relying on two currencies, or many other sets of economic variables, being dependent on each other can be extremely dangerous for a firm. \citet{Robbins} is similarly critical of the time-based line graph, where it is argued that information from overlaid line graphs can easily be misleading (Figure~\ref{murder}). When both lines dive after 1993, it is natural to compare the horizontal distance and say that the difference between the lines in 1994 is small. However, this is incorrect, as looking at the small horizontal distance is comparing the lines at different dates. It is not obvious that the difference in 1994 is the second greatest difference across the entire range, only slightly smaller than in 1993. \citet{Vanderplas} examines this effect in more detail. It is dubbed the 'Sine Illusion', where the human eye is poor at interpreting lines with such a sharp slope. As these problems are unique to the line graph, they argue that the scatter plot, which does not have any ability to display time, is the superior choice. However, in practice many data analysts are split between the two major alternatives for temporal data. The overlaid line graph is justified by its ability to present more information to the analyst; but many argue that it is this extra information that is misleading, and revert to the scatter plot for its strong non-temporal performance.
 
 \begin{figure}[htbp]
   \centering
