four paragraphs of intro

--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -228,9 +228,19 @@ Temporal dependence is present in many macroeconomic variables \citep{Nelson, Pe
   \label{cny}
 \end{figure}
 
-To determine on an appropriate display requires awareness of cognitive principles such as the Gestalt law of common fate \citep{Wertheimer}. People have a tendency to `see' a positive association between two objects that only briefly move together over time, leading them to believe, perhaps erroneously, that they are linked and share a `common fate' (Figure~\ref{cny}). To the contrary, \citet{Lee} suggests that people may better perceive a relationship between objects that move with temporal synchrony in accordance with the Gestalt Law, implying that overlaid line graphs, that utilize a time axis, may outperform the graph types that do not, such as the scatter plot. The magical thinking ideas described in \citet{Diaconis} would counter \citet{Lee}'s findings. Magical thinking means that humans have a strong desire to find patterns, even imaginary, or mirages, which may lead to a false discovery of positive correlation from a small period of synchrony. 
+To determine on an appropriate display requires awareness of cognitive principles such as the Gestalt law of common fate \citep{Wertheimer}. People have a tendency to `see' a positive association between two objects that only briefly move together over time, leading them to believe, perhaps erroneously, that they are linked and share a `common fate'. To the contrary, \citet{Lee} suggests that people may better perceive a relationship between objects that move with temporal synchrony in accordance with the Gestalt Law, implying that overlaid line graphs, that utilize a time axis, may outperform the graph types that do not, such as the scatter plot. The magical thinking ideas described in \citet{Diaconis} would counter \citet{Lee}'s findings. Magical thinking means that humans have a strong desire to find patterns, even imaginary, or mirages, which may lead to a false discovery of positive correlation from a small period of synchrony. Figure~\ref{cny} highlights the interaction between `magical thinking' and the Gestalt Law, the observer may be drawn to the period from April 8 to April 22, and may falsely believe that the two currencies are strongly tied. However, over the entire series the linear correlation between the two currencies is -0.12, indicating there is no actual relationship. 
 
-The law then has two effects, if positive correlation exists in temporal data, the observer may be drawn to it easier. If positive correlation does not exist, the observer may be fooled into thinking it does anyway. Either effect would lead to a more confident rejection of the null than if the same data was displayed as a scatter plot. Figure~\ref{cny} highlights the dangerous interaction between 'magical thinking' and the Gestalt Law, the observer is drawn to the period from April 8 to April 22, and may falsely believe that the two currencies may continue to move together. However, over the entire series the linear correlation between the two currencies is -0.12, indicating there is no actual relationship. Incorrectly relying on two currencies, or many other sets of economic variables, being dependent on each other can be extremely dangerous for a firm. \citet{Robbins} is similarly critical of the time-based line graph, where it is argued that information from overlaid line graphs can easily be misleading (Figure~\ref{murder}). When both lines dive after 1993, it is natural to compare the horizontal distance and say that the difference between the lines in 1994 is small. However, this is incorrect, as looking at the small horizontal distance is comparing the lines at different dates. It is not obvious that the difference in 1994 is the second greatest difference across the entire range, only slightly smaller than in 1993. \citet{Vanderplas} examines this effect in more detail. It is dubbed the 'Sine Illusion', where the human eye is poor at interpreting lines with such a sharp slope. As these problems are unique to the line graph, they argue that the scatter plot, which does not have any ability to display time, is the superior choice. However, in practice many data analysts are split between the two major alternatives for temporal data. The overlaid line graph is justified by its ability to present more information to the analyst; but many argue that it is this extra information that is misleading, and revert to the scatter plot for its strong non-temporal performance.
+The law then has two effects. If positive correlation exists in temporal data, the observer may be drawn to it faster from an overlaid line graph display. If positive correlation does not exist, or only exists ephemerally, the observer may be fooled by the overlaid line graphs into thinking there is strong association. This latter effect is a problem. 
+
+In practice we have lots of choices in how to present information in exploratory analyses or to communicate information. If linear correlation is the only aspect of the data of interest, we might only calculate the correlation between two series. However, if correlation is not the appropriate statistic, because the association is more complex, or if there are outliers, we can typically only discover this by making pictures. Learning how people read plots of data is an important component of data analysis. If information is to be communicated in graphical form it is good to know what we can confidently expect the audience to infer. 
+
+There have been a few studies related to plotting temporal data.  \citet{Robbins} writes a blog and consults on plotting financial data. She is critical of the overlaid line graph, because it is misleading if the purpose is to read the difference between the two series. Her arguments date back a long time to \citet{playfair,tufte,friendly}. It is well-established that we cannot read differences between two series accurately, that the difference should be plotted separately if that is the information of interest.
+
+\citet{Vanderplas} examines a related problem, dubbed the `sine illusion', where the human eye is poor at interpreting lines with sharp slopes. For time series, this means that people do not effectively read variance of seasonal series. 
+
+Correlation study by the ... guys
+
+%As these problems are unique to the line graph, they argue that the scatter plot, which does not have any ability to display time, is the superior choice. However, in practice many data analysts are split between the two major alternatives for temporal data. The overlaid line graph is justified by its ability to present more information to the analyst; but many argue that it is this extra information that is misleading, and revert to the scatter plot for its strong non-temporal performance.
 
 \begin{figure}[htbp]
   \centering
