nearly done with intro

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -65,7 +65,7 @@
  
   pages = {311-341},
  
-  publisher = {Taylor & Francis, Ltd.},
+  publisher = {Taylor \& Francis, Ltd.},
  
   title = {Use of Half-Normal Plots in Interpreting Factorial Two-Level Experiments},
  
@@ -91,7 +91,7 @@
  
   pages = {275-283},
  
-  publisher = {Taylor & Francis, Ltd.},
+  publisher = {Taylor \& Francis, Ltd.},
  
   title = {Two Graphical Techniques Useful in Detecting Correlation Structure in Repeated Measures Data},
  
@@ -392,3 +392,16 @@ doi = {http://doi.ieeecomputersociety.org/10.1109/TVCG.2010.161},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
 }
+
+@article{harrison2014ranking,
+  title = {Ranking Visualizations of Correlation using Weber's Law},
+  author = {Lane Harrison AND Fumeng Yang AND Steven Franconeri AND Remco Chang},
+  journal = {IEEE Conference on Information Visualization (InfoVis)},
+  year = {2014}
+}
+
+@article{lane1985,Author={Lane, D.~M. and Anderson, C.~A. and Kellam, K.~L.},Year=1985,Title={Judging the relatedness of variables:  The psychophysics of covariation detection},journal={Journal of Experimental Psychology:  Human Perception and Performance}, Volume=11, Pages={640--649}}
+
+@article{webers,author={Rensink, R.~A. and Baldridge, G.},Year=2010,title={The perception of correlation in scatterplots}, Journal={Computer Graphics Forum}, volume=29, pages={1203--1210}}
+
+@article{Cleveland1982, Title={Variables on Scatterplots Look More Highly Correlated When the Scales are Increased}, Author={Cleveland, W.~S. and Diaconis, P. and McGill, R.}, journal={Science, New Series}, volume=216, Number=4550, Year=1982, pages={1138--1141}}
